refs #master: new type of shared Data SubjectBehavior

--- a/src/app/house/house.component.html
+++ b/src/app/house/house.component.html
@@ -1,6 +1,9 @@
 <div>
+    <header>
+        <h1>Method 1: Input & Output Way</h1>
+    </header>
     <fieldset class="container">
-        <legend>House Parent</legend>
+        <legend>House Parent (Input & Output way)</legend>
 
         <app-kitchen [kitchenSurface]="kitchenSurface"></app-kitchen>
 
