--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The whole content below can be removed with the new code.-->
 <h2> Interactive Child Parent</h2>
 <app-house></app-house>
-
 <app-push-behavior-data></app-push-behavior-data>
+<app-view-child></app-view-child>
