--- a/src/app/house/house.component.html
+++ b/src/app/house/house.component.html
@@ -2,12 +2,12 @@
     <header>
         <h1>Method 1: Input & Output Way</h1>
     </header>
-    <fieldset class="container">
-        <legend>House Parent (Input & Output way)</legend>
+    <fieldset class="container form-group row">
+        <legend class="col-form-legend">House Parent (Input & Output way)</legend>
+        <div class="col-sm-10">
+            <app-kitchen [kitchenSurface]="kitchenSurface"></app-kitchen>
 
-        <app-kitchen [kitchenSurface]="kitchenSurface"></app-kitchen>
-
-        <app-living-room (reporting)="onSubscribe($event)"></app-living-room>
-
+            <app-living-room (reporting)="onSubscribe($event)"></app-living-room>
+        </div>
     </fieldset>
 </div>
