refs #master: Finish Way 3 ViewChild Child to Parent

--- a/src/app/view-child/view-child.component.html
+++ b/src/app/view-child/view-child.component.html
@@ -10,10 +10,8 @@
     </div>
     <div class="panel panel-info">
         <br/><br/>
-        <label class="center">Parent Quote Choosed from Child</label>
-        <div>
-            <span>{{messageComponent}}</span>
-        </div>
+        <label class="center">Parent Quote Choosed from Child: </label>
+        <span>"" {{messageComponent}} ""</span>
 
         <app-quotes-view-child></app-quotes-view-child>
 
